--- a/src/main/java/com/dyw/client/form/EquipmentManagementForm.form
+++ b/src/main/java/com/dyw/client/form/EquipmentManagementForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.EquipmentManagementForm">
   <grid id="27dc6" binding="equipmentManagementForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="1153" height="800"/>
+      <xy x="20" y="20" width="1119" height="779"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -103,6 +103,16 @@
                 <properties>
                   <font size="20"/>
                   <text value="关闭人脸通行"/>
+                </properties>
+              </component>
+              <component id="fc799" class="javax.swing.JComboBox" binding="equipmentTypeChangeCombo">
+                <constraints>
+                  <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <model/>
                 </properties>
               </component>
             </children>
