--- a/src/main/java/com/dyw/client/form/AccountManagementForm.form
+++ b/src/main/java/com/dyw/client/form/AccountManagementForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.AccountManagementForm">
   <grid id="27dc6" binding="accountManagementForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="770" height="777"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -22,7 +22,28 @@
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="4c9af" class="javax.swing.JButton" binding="accountAddButton">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="新增"/>
+                </properties>
+              </component>
+              <component id="d8451" class="javax.swing.JButton" binding="accountDeleteButton">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="删除"/>
+                </properties>
+              </component>
+            </children>
           </grid>
           <grid id="45f02" binding="accountManagementContentPanel" layout-manager="GridBagLayout">
             <constraints>
