2019年7月17日01点30分

--- a/src/main/java/com/dyw/client/form/HistoryVideoForm.form
+++ b/src/main/java/com/dyw/client/form/HistoryVideoForm.form
@@ -181,6 +181,7 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <preferredSize width="60" height="37"/>
               <text value="20"/>
             </properties>
           </component>
@@ -206,7 +207,7 @@
                 <constraints/>
                 <properties>
                   <font size="20"/>
-                  <rowHeight value="35"/>
+                  <rowHeight value="160"/>
                 </properties>
               </component>
             </children>
