2019年8月1日18点03分

--- a/src/main/java/com/dyw/client/form/guard/AlarmForm.form
+++ b/src/main/java/com/dyw/client/form/guard/AlarmForm.form
@@ -39,11 +39,21 @@
           <component id="1562b" class="javax.swing.JButton" binding="alarmTitleButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
+              <gridbag top="0" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <font size="20"/>
               <text value="清空页面"/>
+            </properties>
+          </component>
+          <component id="51151" class="javax.swing.JButton" binding="unsolvedAlarmButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="未处理报警"/>
             </properties>
           </component>
         </children>
