--- a/src/main/java/com/dyw/client/form/AlarmHistoryForm.form
+++ b/src/main/java/com/dyw/client/form/AlarmHistoryForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.AlarmHistoryForm">
   <grid id="27dc6" binding="alarmHistoryForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="1359" height="798"/>
+      <xy x="20" y="12" width="1332" height="745"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -207,6 +207,26 @@
             <properties>
               <font size="20"/>
               <text value="下一页"/>
+            </properties>
+          </component>
+          <component id="831b7" class="javax.swing.JLabel" binding="pageInfoLabel">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="43ccb" class="javax.swing.JLabel" binding="totalNumberLabel">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
