--- a/src/main/java/com/dyw/client/form/MonitorHistoryForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorHistoryForm.form
@@ -202,6 +202,16 @@
                       <text value="导出记录"/>
                     </properties>
                   </component>
+                  <component id="6548d" class="javax.swing.JLabel" binding="pageInfoLabel">
+                    <constraints>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <grid id="10b44" binding="perPageNumberPanel" layout-manager="GridBagLayout">
