--- a/src/main/java/com/dyw/client/form/MonitorRealTimeForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorRealTimeForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.MonitorRealTimeForm">
   <grid id="27dc6" binding="monitorRealTimePanel" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="1112" height="785"/>
+      <xy x="20" y="20" width="1175" height="853"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -193,7 +193,7 @@
                     </constraints>
                     <properties>
                       <font size="26"/>
-                      <text value="通行报警记录"/>
+                      <text value="胁迫报警记录"/>
                     </properties>
                   </component>
                 </children>
@@ -205,7 +205,25 @@
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <scrollpane id="cb736" binding="passAlarmContentScroll">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="1.0" weighty="1.0"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="bf312" class="javax.swing.JTable" binding="passAlarmContentTable">
+                        <constraints/>
+                        <properties>
+                          <font size="16"/>
+                          <rowHeight value="30"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
+                </children>
               </grid>
             </children>
           </grid>
