--- a/src/main/java/com/dyw/client/form/DataAnalysisForm.form
+++ b/src/main/java/com/dyw/client/form/DataAnalysisForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.DataAnalysisForm">
   <grid id="27dc6" binding="dataAnalysisForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="842" height="400"/>
+      <xy x="20" y="20" width="1190" height="847"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -66,11 +66,21 @@
               <component id="c1e39" class="javax.swing.JButton" binding="searchButton">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0" ipadx="20"/>
+                  <gridbag top="0" left="0" bottom="0" right="50" weightx="0.0" weighty="0.0" ipadx="20"/>
                 </constraints>
                 <properties>
                   <font size="20"/>
                   <text value="查询"/>
+                </properties>
+              </component>
+              <component id="8ce27" class="javax.swing.JButton" binding="exportButton">
+                <constraints>
+                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="导出"/>
                 </properties>
               </component>
             </children>
