--- a/src/main/java/com/dyw/client/form/MonitorRealTimeForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorRealTimeForm.form
@@ -193,7 +193,16 @@
                     </constraints>
                     <properties>
                       <font size="26"/>
-                      <text value="胁迫报警记录"/>
+                      <text value="报警记录"/>
+                    </properties>
+                  </component>
+                  <component id="b6a2e" class="javax.swing.JButton" binding="alarmHistoryButton">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <text value="报警记录查询"/>
                     </properties>
                   </component>
                 </children>
